authors page file

--- a/templates/authors.html
+++ b/templates/authors.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Authors</title>
 </head>
-<body>
+<body class="font-roboto flex justify-center">
+    <div class="conrainer w-[85%] bg-gray-100/50">
     <h1>Authors</h1>
+    <div class=" flex flex-row justify-around items-center flex-wrap p-10 space-y-5">
+        {%for s_author in authors%}
+            <div class="max-w-[35%] border  bg-white p-4 space-y-3">
+                <img src="{{s_author.image}}" class="h-24 rounded-md" alt="" srcset="">
+                <h2> Name : {{s_author.name}}</h2>
+                <h2> Age : {{s_author.age}} <span>Years</span></h2>
+                <h2> Nationality : {{s_author.nationality}}</h2>
+                <div>
+                    <span >Genre :</span>
+                    {% for s_genre in s_author.genre %}
+                    <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">{{s_genre}}</span>
+                    {% endfor %}
+                </div>
+                <div>
+                    <span>Awards :</span>
+                    {% for s_award in s_author.awards %}
+                        <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-blue-600 ring-1 ring-inset ring-blue-600/50">{{s_award}}</span>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    </div>
 </body>
 </html>
